fix dashboard padding overflow

--- a/frontend/static/bongos/bongos.css
+++ b/frontend/static/bongos/bongos.css
@@ -37,7 +37,6 @@
 
 .dashboard {
     margin-bottom: 20px;
-    padding: 5px 0;
     border-bottom: 1px solid rgb(215, 215, 215)
 }
 
